--- a/front-end/src/components/AdminComponents/HotelManager.css
+++ b/front-end/src/components/AdminComponents/HotelManager.css
@@ -2,7 +2,6 @@
     padding: 1em;
     margin-bottom: 1.5em;
     box-shadow: 0 .5em .5em lightgray;
-    overflow-x: auto;
 }
 .HotelManager__header {
     display: flex;
@@ -25,7 +24,4 @@
 .HotelManager__room-table__heading {
     color: white;
     background-color: green;
-}
-.HotelManager__room-table th, .HotelManager__room-table td {
-    padding: .5em 1em;
 }
